--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "async": "^1.4.2",
     "body-parser": "^1.14.0",
+    "bunyan": "^1.5.1",
     "express": "~4.0.0",
     "mongoose": "^4.1.8",
     "serialport": "^1.7.4",
